--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -10,8 +10,8 @@
           <link rel="stylesheet" href="css/small.css">
           <link rel="stylesheet" href="css/medium.css">
           <link rel="stylesheet" href="css/large.css">
-          <script defer src="js/footerdates.js"></script>
           <script defer src="js/hamburger.js"></script>
+          <script defer src="js/footerdates.js"></script>
           <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Poppins:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -33,18 +33,18 @@
       </header>
 
 
-      <nav class="hammenu">
-        <button onclick="toggleMenu()">&#9776; Menu</button>
-            <ul id="primaryNav" class="hide">
-            <li><a href="index.html">Home</a></li>
-            <li class="activebutton"><a href="preston-4.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+      <nav>
+        <button onclick="toggleNav()">&#9776; Menu</button>
+        <ul id="primaryNav" class="hide">
+          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href=""https://mikennaa.github.io/wdd230/lesson4/preston-4.html">Preston</a></li>
+          <li><a href="#">Soda Springs</a></li>
+          <li><a href="#">Fish Haven</a></li>
+          <li><a href="#">Storm Center</a></li>
+          <li><a href="#">Gallery</a></li>
         </ul>
-    </nav>
-
+      </nav>
+  
 <main>
   <section class="maincontent">
   <h2>Welcome To The City of Preston, Idaho</h2>
