--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -33,11 +33,11 @@
       </header>
 
 
-      <nav>
-        <button onclick="toggleNav()">&#9776; Menu</button>
+      <nav class="clearfix">
+        <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="primaryNav" class="hide">
-          <li><a href="index.html">Home</a></li>
-          <li class="active"><a href=""https://mikennaa.github.io/wdd230/lesson4/preston-4.html">Preston</a></li>
+          <li><a href="#">Home</a></li>
+          <li class="activebutton"><a href="preston-4">Preston</a></li>
           <li><a href="#">Soda Springs</a></li>
           <li><a href="#">Fish Haven</a></li>
           <li><a href="#">Storm Center</a></li>
