--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -35,17 +35,17 @@
       </header>
 
 
-      <nav class="hammenu">
+      <nav class="clearfix">
         <button onclick="toggleMenu()">&#9776; Menu</button>
-            <ul id="primaryNav" class="hide">
-            <li><a href="index.html">Home</a></li>
-            <li class="activebutton"><a href="preston-4.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+        <ul id="primaryNav" class="hide">
+          <li><a href="#">Home</a></li>
+          <li class="activebutton"><a href="preston-4">Preston</a></li>
+          <li><a href="#">Soda Springs</a></li>
+          <li><a href="#">Fish Haven</a></li>
+          <li><a href="#">Storm Center</a></li>
+          <li><a href="#">Gallery</a></li>
         </ul>
-    </nav>
+      </nav>
 
 <main>
   <div class="maincontent">
