--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -66,9 +66,9 @@
             <span class="currentval">Partly Cloudy</span>
             <span class="suminfo">Temperature:</span>
                 <span class="temp">60°F</span>
-            <span class="suminfo">Wind Chill:
+            <span class="suminfo">Wind Chill:</span>
+              <span class="currentval">
                 <span class="windchill"></span></span>
-            <span class="currentval">10 mph</span>
             <span class="suminfo">Wind Speed:</span>
             <span class="currentval">
                 <span class="windspeed">3</span> mph</span>
