--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -80,7 +80,7 @@
           </div>
         </section>
       </div>
-
+  </div>
   <section class="contentboxes">
       <h2>5-Day Forecast</h2>
 <div class="forecast">
@@ -137,7 +137,7 @@
 <footer>
   <section class="contactinfo">
     <div class="map">
-      <img class="prestonMap" src="images/preston map.png" alt="Map of Preston, Idaho" width="360" height="300">
+      <img class="prestonMap" src="images/prestonmap.png" alt="Map of Preston, Idaho" width="360" height="300">
     </div>
 
     <h2>Contact Us</h2>
