--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -54,7 +54,7 @@
      <ul>
        <li>
          <figure class="gallerygrid">
-           <img class="galleryimg" src="images/wplaceholder.jpg" data-src="" alt="">
+           <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery.jpg" alt="">
            <figcaption>
 
            </figcaption>
@@ -63,7 +63,7 @@
 
        <li>
         <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="" alt="">
+          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery3.jpg" alt="">
           <figcaption>
 
           </figcaption>
@@ -72,7 +72,7 @@
 
       <li>
         <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="" alt="">
+          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="">
           <figcaption>
 
           </figcaption>
@@ -81,7 +81,7 @@
 
       <li>
         <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="" alt="">
+          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery5.jpg" alt="">
           <figcaption>
 
           </figcaption>
@@ -90,7 +90,7 @@
 
       <li>
         <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="" alt="">
+          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery6.jpg" alt="">
           <figcaption>
 
           </figcaption>
@@ -99,7 +99,7 @@
 
       <li>
         <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="" alt="">
+          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery2.jpg" alt="">
           <figcaption>
 
           </figcaption>
@@ -108,7 +108,7 @@
 
       <li>
         <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="" alt="">
+          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery7.jpg" alt="">
           <figcaption>
 
           </figcaption>
@@ -117,7 +117,7 @@
 
       <li>
         <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="" alt="">
+          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery8.jpg" alt="">
           <figcaption>
 
           </figcaption>
@@ -126,7 +126,7 @@
 
       <li>
         <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="" alt="">
+          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery9.jpg" alt="">
           <figcaption>
 
           </figcaption>
