--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -53,84 +53,69 @@
       <div class= "gallery">
      <ul>
        <li>
-         <figure class="gallerygrid">
-           <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery.jpg" alt="">
-           <figcaption>
-
-           </figcaption>
-         </figure>
+         <picture class="gallerygrid">
+           <img src="images/wplaceholder.jpg" data-src="images/wgallery.jpg" alt="">
+           <p> </p>
+         </picture>
        </li>
 
        <li>
-        <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery3.jpg" alt="">
-          <figcaption>
-
-          </figcaption>
-        </figure>
+        <picture class="gallerygrid">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery3.jpg" alt="">
+          <p> </p>
+        </picture>
       </li>
 
       <li>
-        <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="">
-          <figcaption>
-
-          </figcaption>
-        </figure>
+        <picture class="gallerygrid">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="">
+          <p> </p>
+        </picture>
       </li>
 
       <li>
-        <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery5.jpg" alt="">
-          <figcaption>
-
-          </figcaption>
-        </figure>
+        <picture class="gallerygrid">
+          <imgsrc="images/wplaceholder.jpg" data-src="images/wgallery5.jpg" alt="">
+          <p> </p>
+        </picture>
       </li>
 
       <li>
-        <figure class="gallerygrid">
+        <picture class="gallerygrid">
           <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery6.jpg" alt="">
-          <figcaption>
-
-          </figcaption>
-        </figure>
+          <p> </p>
+        </picture>
       </li>
 
       <li>
-        <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery2.jpg" alt="">
-          <figcaption>
-
-          </figcaption>
-        </figure>
+        <picture class="gallerygrid">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery2.jpg" alt="">
+          <p> </p>
+        </picture>
       </li>
 
       <li>
-        <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery7.jpg" alt="">
-          <figcaption>
+        <picture class="gallerygrid">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery7.jpg" alt="">
+          <p> </p>
 
-          </figcaption>
-        </figure>
+        </picture>
       </li>
 
       <li>
-        <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery8.jpg" alt="">
-          <figcaption>
+        <picture class="gallerygrid">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery8.jpg" alt="">
+          <p></p>
 
-          </figcaption>
-        </figure>
+        </picture>
       </li>
 
       <li>
-        <figure class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery9.jpg" alt="">
-          <figcaption>
-
-          </figcaption>
-        </figure>
+        <picture class="gallerygrid">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery9.jpg" alt="">
+          <p> </p>
+        </picture>
+        
       </li>
      </ul>
      </div>
