--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -54,66 +54,66 @@
      <ul>
        <li>
          <picture class="gallerygrid">
-           <img src="images/wplaceholder.jpg" data-src="images/wgallery.jpg" alt="">
-           <p> </p>
+           <img src="images/wplaceholder.jpg" data-src="images/wgallery.jpg" alt="blossoms on a tree">
+           <p>Can you feel it? It's springtime! The blossoms are here!</p>
          </picture>
        </li>
 
        <li>
         <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images/wgallery3.jpg" alt="">
-          <p> </p>
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery3.jpg" alt="green fields">
+          <p>We are loving the beautiful pictures coming in of our valley in full Spring!</p>
         </picture>
       </li>
 
       <li>
         <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="">
-          <p> </p>
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="mountains, and a small body of water">
+          <p>Don't you love that reflection in the water! Summer is absolutely beautiful here in Preston, and we hope those fluffy clouds turn to rain1</p>
         </picture>
       </li>
 
       <li>
         <picture class="gallerygrid">
-          <imgsrc="images/wplaceholder.jpg" data-src="images/wgallery5.jpg" alt="">
-          <p> </p>
+          <imgsrc="images/wplaceholder.jpg" data-src="images/wgallery5.jpg" alt="dark sky filled with clouds hovering over houses">
+          <p>Do you see what we see? We have some wonderful clouds rolling in, now all we need is the rain!</p>
         </picture>
       </li>
 
       <li>
         <picture class="gallerygrid">
-          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery6.jpg" alt="">
-          <p> </p>
+          <img class="galleryimg" src="images/wplaceholder.jpg" data-src="images/wgallery6.jpg" alt="lighting in the sky">
+          <p>Isn't this shot incredible! That lightning making it's way across the sky is absolutely incredible!</p>
         </picture>
       </li>
 
       <li>
         <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images/wgallery2.jpg" alt="">
-          <p> </p>
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery2.jpg" alt="a field of sunflowers">
+          <p>You know it's getting to be the end of Summer when these beauties are in full bloom! Oh enjoy these blooming sunshines!</p>
         </picture>
       </li>
 
       <li>
         <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images/wgallery7.jpg" alt="">
-          <p> </p>
-
-        </picture>
-      </li>
-
-      <li>
-        <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images/wgallery8.jpg" alt="">
-          <p></p>
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery7.jpg" alt="person with an umbrella in the snow flurries">
+          <p>You know you live in Idaho when snow arrives in October! Grab your umbrellas, and winter coats, snow is here.</p>
 
         </picture>
       </li>
 
       <li>
         <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images/wgallery9.jpg" alt="">
-          <p> </p>
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery8.jpg" alt="snowpacked pine trees">
+          <p>While we know it's cold outside, doesn't the sight of these snowcovered pines make you so happy! They are a piece of art!</p>
+
+        </picture>
+      </li>
+
+      <li>
+        <picture class="gallerygrid">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery9.jpg" alt="man/woman with dog cross-country skiing across a lake surrounded by mountains">
+          <p>Isn't this view breathtaking! Don't let the cold keep you in, grab a pair of ski's and get outside!</p>
         </picture>
         
       </li>
