--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -6,13 +6,13 @@
     <title>Naturally Weather Gallery</title>
     <meta name="description" content="Naturally Weather Photo Gallery">
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="lesson6/css/small.css">
-    <link rel="stylesheet" href="lesson6/css/medium.css">
-    <link rel="stylesheet" href="lesson6/css/large.css">
-    <link rel="stylesheet" href="lesson6/css/normalize.css">
-    <script defer src="lesson6/js/footerdates.js"></script>
-    <script defer src="lesson6/js/hamburger.js"></script>
-    <script defer src="lesson6/js/fonts.js"></script>
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <script defer src="js/footerdates.js"></script>
+    <script defer src="js/hamburger.js"></script>
+    <script defer src="js/fonts.js"></script>
     <script defer src="lazyload.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
       <li>
         <picture class="gallerygrid">
           <img src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="mountains, and a small body of water">
-          <p>Don't you love that reflection in the water! Summer is absolutely beautiful here in Preston, and we hope those fluffy clouds turn to rain1</p>
+          <p>Don't you love that reflection in the water! Summer is absolutely beautiful here in Preston, and we hope those fluffy clouds turn to rain.</p>
         </picture>
       </li>
 
