--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -54,15 +54,15 @@
           <h2>Weather Summary</h2>
           <div class="gridlayout">
             <span class="suminfo">Currently:</span>
-            <span id="currentval">Partly Cloudy</span>
+            <span class="currentval">Partly Cloudy</span>
             <span class="suminfo">Temperature:</span>
-            <span id="currentval">60°F</span>
+            <span class="currentval">60°F</span>
             <span class="suminfo">Wind:</span>
-            <span id="currentval">10 mph</span>
+            <span class="currentval">10 mph</span>
             <span class="suminfo">Humidity:</span>
-            <span id="currentval">55%</span>
+            <span class="currentval">55%</span>
             <span class="suminfo">UV Index:</span>
-            <span id="currentval">4 of 10</span>
+            <span class="currentval">4 of 10</span>
           </div>
         </section>
       </div>
@@ -72,27 +72,27 @@
 <div class="forecast">
 	<div class="forecast-col">
 		<span class="col-head">Mon</span>
-		<img src="images/rainshowers.png" alt="rain showers" width="70" height="auto">
+		<img src="images/rainshowers.png" alt="rain showers" width="70" height="70">
 		<span class="data">50°F</span>
 	</div>
 	<div class="forecast-col">
 		<span class="col-head">Tues</span>
-		<img src="images/snowshowers.png" alt="snow showers" width="70" height="auto" >
+		<img src="images/snowshowers.png" alt="snow showers" width="70" height="70" >
 		<span class="data">41°</span>
 	</div>
 	<div class="forecast-col">
 		<span class="col-head">Wed</span>
-		<img src="images/cloudy.png" alt="partly cloudy" width="70" height="auto">
+		<img src="images/cloudy.png" alt="partly cloudy" width="70" height="70">
 		<span class="data">51°</span>
 	</div>
 	<div class="forecast-col">
 		<span class="col-head">Thur</span>
-		<img src="images/sunny.png" alt="sunny" width="70" height="auto">
+		<img src="images/sunny.png" alt="sunny" width="70" height="70">
 		<span class="data">56°</span>
 	</div>
 	<div class="forecast-col">
 		<span class="col-head">Fri</span>
-		<img src="images/sunny.png" alt="sunny" width="70" height="auto">
+		<img src="images/sunny.png" alt="sunny" width="70" height="70">
 		<span class="data">60°</span>
 	</div>	
 </div>
@@ -101,7 +101,7 @@
 <section class="contentboxes">
       <h2>Community News</h2>
 <div class="tomatoes">
-      <img src="images/tomatoes.jpg" alt="A bowl full of tomatoes, it's harvest time" width="350" height="auto">
+      <img src="images/tomatoes.jpg" alt="A bowl full of tomatoes, it's harvest time" width="350" height="230">
 </div>
       <p>
   Most people I talked to this week have picked the last of their tomato crop and had them in the pressure canner on the stove. The clouds gathered for a day, thundered and lightning, and rain dampened the sidewalks, roads, and grass. Afterward, a brilliantly colored rainbow arched over our neighborhood street.
@@ -126,7 +126,7 @@
   <section class="contactinfo">
     <h2>Contact Us</h2>
     <div class="map">
-    <a href="https://www.google.com/maps/place/70+W+Oneida+St,+Preston,+ID+83263/data=!4m2!3m1!1s0x8754f7eb62a17851:0xf92c5fa2b365fd2?sa=X&ved=2ahUKEwiC6qT51M3zAhXGCTQIHVfFA_8Q8gF6BAgPEAE"><img src="images/preston map.png" alt="Map of Preston, Idaho" width="300" height="auto"></a>
+    <a href="https://www.google.com/maps/place/70+W+Oneida+St,+Preston,+ID+83263/data=!4m2!3m1!1s0x8754f7eb62a17851:0xf92c5fa2b365fd2?sa=X&ved=2ahUKEwiC6qT51M3zAhXGCTQIHVfFA_8Q8gF6BAgPEAE"><img src="images/preston map.png" alt="Map of Preston, Idaho" width="300" height="300"></a>
   </div>
     <p>Address<br>
 70 West Oneida
@@ -136,11 +136,11 @@ Preston, Idaho 83263</p>
   Email: welcome@prestonid.us
 <br>
 <p>Click map for directions</p>
-</p><br>
+<br>
 <div class="social">
-<a href="www.facebook.com"><img src="images/facebook.png" alt="Facebook icon" width="50" height="auto"></a>
-<a href="www.instagram.com"><img src="images/instagram.png" alt="Instagram icon" width="50" height="auto"></a>
-<a href="www.twitter.com"><img src="images/twitter.png" alt="Twitter icon" width="50" height="auto"></a>
+<a href="www.facebook.com"><img src="images/facebook.png" alt="Facebook icon" width="50" height="50"></a>
+<a href="www.instagram.com"><img src="images/instagram.png" alt="Instagram icon" width="50" height="50"></a>
+<a href="www.twitter.com"><img src="images/twitter.png" alt="Twitter icon" width="50" height="50"></a>
 </div>
 </section>
     <br>
