revised lazyload reference line 16

--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -13,7 +13,7 @@
     <script defer src="js/footerdates.js"></script>
     <script defer src="js/hamburger.js"></script>
     <script defer src="js/fonts.js"></script>
-    <script defer src="lazyload.js"></script>
+    <script defer src="js/lazyload.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Poppins:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">    
