reference edit line 39

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
       <section>
         <h2>WDD 230:Assignment Portal</h2>
         <ul>
-            <li>Lesson 2:<a href="https://mikennaa.github.io/wdd230//lesson2/design-principles.html">Design Principles</a></li>
-            <li>Lesson 3:<a href="https://mikennaa.github.io/wdd230//lesson3/index.html">Weather Site Project</a></li>
-            <li>Lesson 4:<a href="https://mikennaa.github.io/wdd230/lesson4/preston-4.html">Preston Weather Page</a></li>
-            <li>Lesson 5:<a href="https://mikennaa.github.io/wdd230/lesson5/preston-5.html">Preston Weather Forecast</a></li>
-            <li>Lesson 5:<a href="https://mikennaa.github.io/wdd230/bom/bom.html">BOM Favorites Activity</a></li>
-            <li>Lesson 6:<a href="https://mikennaa.github.io/wdd230/lesson6/preston-6.html">Preston Weather Forecast-Images.Fonts.Windchill</a></li>
-            <li>Student Presentation:<a href="https://screencast-o-matic.com/watch/cr6FDqVXHNL">Titles and Descriptions</a></li>
-            <li>Lesson 7:<a href="https://mikennaa.github.io/wdd230/lesson7/lazyload.html">Progressive Images Activity</a></li>
-            <li>Lesson 7:<a href="https://mikennaa.github.io/wdd230/lesson7/gallery-7.html">Weather Gallery</a></li>
-            <li>lesson 8:<a href="https://mikennaa.github.io/wdd230/lesson8/tablebuild.html">ACME Wildwest Table Activity<</a></li>
+            <li>Lesson 2: <a href="https://mikennaa.github.io/wdd230//lesson2/design-principles.html">Design Principles</a></li>
+            <li>Lesson 3: <a href="https://mikennaa.github.io/wdd230//lesson3/index.html">Weather Site Project</a></li>
+            <li>Lesson 4: <a href="https://mikennaa.github.io/wdd230/lesson4/preston-4.html">Preston Weather Page</a></li>
+            <li>Lesson 5: <a href="https://mikennaa.github.io/wdd230/lesson5/preston-5.html">Preston Weather Forecast</a></li>
+            <li>Lesson 5: <a href="https://mikennaa.github.io/wdd230/bom/bom.html">BOM Favorites Activity</a></li>
+            <li>Lesson 6: <a href="https://mikennaa.github.io/wdd230/lesson6/preston-6.html">Preston Weather Forecast-Images.Fonts.Windchill</a></li>
+            <li>Student Presentation: <a href="https://screencast-o-matic.com/watch/cr6FDqVXHNL">Titles and Descriptions</a></li>
+            <li>Lesson 7: <a href="https://mikennaa.github.io/wdd230/lesson7/lazyload.html">Progressive Images Activity</a></li>
+            <li>Lesson 7: <a href="https://mikennaa.github.io/wdd230/lesson7/gallery-7.html">Weather Gallery</a></li>
+            <li>lesson 8: <a href="https://mikennaa.github.io/wdd230/lesson8/tablebuild.html">ACME Wildwest Table Activity</a></li>
             
             
           </ul>
