--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -20,12 +20,6 @@
 </head>
 
 <body>
-
-    <div class="pancakefriday">
-      <p>🥞Preston Pancakes In The Park!🥞 
-      <br>Saturday 9am at the City Park Pavillion</p>
-      </div>
-      
       <header>
         <picture><img src="images/weatherbolt.png" alt="naturally weather logo with cloud and bolt" width="150" height="150"></picture>
          
@@ -118,10 +112,10 @@
      </div>
      </main>
   <footer>
+    <span id="visits"></span><br>
     &copy; <span id="copyrightyear">2021</span> | Naturally Weather | Attributions | Mikenna Atkinson
     <br> <span id="currentDate"></span>
-    <span id="visits"></span>
+   
    </footer>
   </body>
 </html>  
-
