--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -40,16 +40,72 @@
       </nav>
     
 
-<main>
+<main class="stormCenter">
     <h2>Report A Storm</h2>
+    <form method="get" action="thanks.html">
+        <div class="stormform">
+            <fieldset>
+                <legend>Contact Information</legend>
+                <label class="top">Full Name* <input type="text" name="fname" required pattern="[A-Za-z].{5,}"></label>
+                <label class="top">Email <input type="email" name="email" placeholder="someone@gmail.com"></label>
+                <label class="top">Phone* <input type="tel" name="phone" required></label>
+                <label class="top">Zip Code* <input type="number" name="zcode" required></label>
+            </fieldset>
+            <fieldset>
+                <legend>Storm Information</legend>
+                <label class="top">Storm Date <input type="date" name="stormdate" required></label>
+                <label class="top">Storm Type <input list="storm-type" name="stormtype" required>
+                <datalist id="stormtype">
+                    <option value="Flash Flood"></option>
+                    <option value="Hail"></option>
+                    <option value="Hurricane"></option>
+                    <option value="Snowstorm"></option>
+                    <option value="Thunderstorm"></option>
+                    <option value="Tornado"></option>
+                </datalist></label>
+            
+            <div>Storm Severity</div>
+                <label class="stormrange" for="stormSeverity">Rating: &nbsp;&nbsp;&nbsp;
+                    <input type="range" id="rating" value="5" min="1" max="10" step="1" list="tickmarks" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
+                    <span id="ratingvalue">5</span> 
+                <datalist id="tickmarks">
+                    <option value="0">
+                    <option value="1">
+                    <option value="2">
+                    <option value="3">
+                    <option value="4">
+                    <option value="5">
+                    <option value="6">
+                    <option value="7">
+                    <option value="8">
+                    <option value="9">
+                    <option value="10">
+                </datalist>
+                </label>
 
+                <label class="top">Storm Region <select name="region">
+                    <option value="">Select Region &#9662;</option>
+                    <option value="fishhaven">Fish Haven</option>
+                    <option value="preston">Preston</option>
+                    <option value="sodasprings">Soda Springs</option>
+                    </select>
+                    </label>
 
-</main>
-<footer>
-  <span id="visits"></span><br>
-  &copy; <span id="copyrightyear">2021</span> | Naturally Weather | Attributions | Mikenna Atkinson
-  <br> <span id="currentDate"></span>
- 
- </footer>
+                <div>Are you in danger?</div>
+                <label class="sbs"><input type="radio" name="danger" value="yes">Yes</label>
+                <label class="sbs"><input type="radio" name="danger" value="maybe">Maybe</label>
+                <label class="sbs"><input type="radio" name="danger" value="no">No</label>
+                <label for="addInfo" class="top">Additional Information <textarea name="addInfo" id="addinfo" cols="50" rows="10"></textarea></label>
+                </fieldset></div>
+
+                <div class="sbutton">
+                <input type="submit" value="Submit" class="submitbutton"></div>
+            </form>
+            </main>
+            <footer>
+                <span id="visits"></span><br>
+                &copy; <span id="copyrightyear">2021</span> | Naturally Weather | Attributions | Mikenna Atkinson
+                <br> <span id="currentDate"></span>
+            </footer>
 </body>
 </html>  
