--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/large.css">
     <script defer src="js/footerdates.js"></script>
     <script defer src="js/hamburger.js"></script>
+    <script defer src="js/stormcenter.js></script>"
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Poppins:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">    
@@ -45,7 +46,7 @@
     <form method="get" action="thanks.html">
         <div class="stormform">
             <fieldset>
-                <legend>Contact Information</legend>
+                <legend><h3>Contact Information</h3></legend>
                 <label class="top">Full Name* <input type="text" name="fname" required pattern="[A-Za-z].{5,}"></label>
                 <label class="top">Email <input type="email" name="email" placeholder="someone@gmail.com"></label>
                 <label class="top">Phone* <input type="tel" name="phone" required></label>
