--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li>Lesson 7: <a href="https://mikennaa.github.io/wdd230/lesson7/lazyload.html">Progressive Images Activity</a></li>
             <li>Lesson 7: <a href="https://mikennaa.github.io/wdd230/lesson7/gallery-7.html">Weather Gallery</a></li>
             <li>Lesson 8: <a href="https://mikennaa.github.io/wdd230/lesson8/tablebuild.html">ACME Wildwest Table Activity</a></li>
-            <li>Lesson 9: <a href="https://mikennaa.github.io/wdd230/lesson8/stormcenter.html>Storm Center Page</a></li>
+            <li>Lesson 8: <a href="https://mikennaa.github.io/wdd230/lesson8/stormcenter.html">Storm Center Page</a></li>
             
             
           </ul>
