--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     </main>
     
     <footer>
-      &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastupdate"></span>
+      &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> <br>
+      Last Updated:<span id="lastupdate"></span>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js">
     </script>
