--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mikenna N. Atkinson</title>
+    <title>Latter-Day Prophet Card Activity Page</title>
     <meta name="description" content="Latter-Day Prophets JSON activity ">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/prophets.css">
@@ -11,9 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script defer src="prophets.js"></script>
-    
   </head>
-
   <body>
     <header>
         <h1>Latter-day Prophets</h1>
@@ -21,8 +19,6 @@
       <main>
         <div class="cards"></div>
       </main>
-      <footer>
-        Mikenna Atkinson | BYU-Idaho | WDD 230
-      </footer>
+      <footer>Mikenna Atkinson | BYU-Idaho | WDD 230 </footer>
     </body>
 </html>
