--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script defer src="prophets.js"></script>
+    <script defer src="js/prophets.js"></script>
   </head>
   <body>
     <header>
