--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li>Lesson 8: <a href="https://mikennaa.github.io/wdd230/lesson8/tablebuild.html">ACME Wildwest Table Activity</a></li>
             <li>Lesson 8: <a href="https://mikennaa.github.io/wdd230/lesson8/stormcenter.html">Storm Center Page</a></li>
             <li>Lesson 9: <a href="https://mikennaa.github.io/wdd230/lesson9/prophets.html">Latter-Day Prophets Activity</a></li>
+            <li>Lesson 9: <a href="https://mikennaa.github.io/wdd230/lesson9/home-wireframe.html">Home Page Wireframes</a></li>
             
             
           </ul>
