--- a/lesson9/home-wireframes.html
+++ b/lesson9/home-wireframes.html
@@ -38,6 +38,9 @@
     
 
 <main>
+  <picture><img src="images/smallwireframe.jpg" alt="small wireframe"></picture>
+  <picture><img src="images/mediumwireframe.jpg" alt="medium wireframe"></picture>
+  <picture><img src="images/largewireframe.jpg" alt="large wireframe"></picture>
 
     </main>
     <footer>
