--- a/lesson9/home-wireframes.html
+++ b/lesson9/home-wireframes.html
@@ -38,13 +38,16 @@
     
 
 <main>
-  <picture><img src="images/smallwireframe.jpg" alt="small wireframe"></picture>
+  <h2>Small Wireframe</h2>
+  <picture><img src="images/smallwireframe.jpg" alt="small wireframe" width="200"></picture>
   <br><br>
 
-  <picture><img src="images/mediumwireframe.jpg" alt="medium wireframe"></picture>
+  <h2>Medium Wireframe</h2>
+  <picture><img src="images/mediumwireframe.jpg" alt="medium wireframe" width="300"></picture>
   <br> <br>
 
-  <picture><img src="images/largewireframe.jpg" alt="large wireframe"></picture>
+  <h2>Large Wireframe</h2>
+  <picture><img src="images/largewireframe.jpg" alt="large wireframe" width="400"></picture>
   <br><br>
 
     </main>
