--- a/lesson9/home-wireframes.html
+++ b/lesson9/home-wireframes.html
@@ -27,12 +27,12 @@
       <nav class="clearfix">
         <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="primaryNav" class="hide">
-          <li><a href="#">Home</a></li>
+          <li class="activebutton"><a href="#">Home</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson6/preston-6.html">Preston</a></li>
           <li><a href="#">Soda Springs</a></li>
           <li><a href="#">Fish Haven</a></li>
-          <li class="activebutton"><a href="stormcenter.html">Storm Center</a></li>
-          <li><a href="gallery-7.html">Gallery</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson8/stormcenter.html">Storm Center</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson7/gallery-7.html">Gallery</a></li>
         </ul>
       </nav>
     
