--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -41,13 +41,34 @@
 
 <main>
 
-
-
-
+    <section class="contactinfo">  
+        <div class="map">
+            <img class="prestonMap" src="images/prestonmap.png" alt="Map of Preston, Idaho" width="360" height="300">
+          </div>
+        <h2>Contact Us</h2>
+        <p>Address<br>
+    70 West Oneida
+    Preston, Idaho 83263</p>
+    <p>Phone: (208)852-1817<br>
+      Fax: (208)852-1820 <br>
+      Email: welcome@prestonid.us
+    <br>
+    <p>Click map for directions</p><br>
+    
+    
+    <div class="social">
+    <a href="www.facebook.com"><img src="images/facebook.png" alt="Facebook icon" width="50" height="50"></a>
+    <a href="www.instagram.com"><img src="images/instagram.png" alt="Instagram icon" width="50" height="50"></a>
+    <a href="www.twitter.com"><img src="images/twitter.png" alt="Twitter icon" width="50" height="50"></a>
+    </div>
+    </section>
 </main>
-<footer>
+
+    <footer>
+    <div class="footerinfo">
     &copy; <span id="copyrightyear">2021</span> | Naturally Weather | Attributions | Mikenna Atkinson
     <br> <span id="currentDate"></span>
+    </div>
 </footer>
 </body>
 </html>
