--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+  <div class="pancakefriday">
+    <p>🥞Preston Pancakes In The Park!🥞 
+    <br>Saturday 9am at the City Park Pavillion</p>
+    </div>
+    
       <header>
         <picture><img src="images/weatherbolt.png" alt="naturally weather logo with cloud and bolt" width="150" height="150"></picture>
          
