--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
     <script defer src="js/homepage.js"></script>
+    <script defer src="js/lazyload.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Poppins:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">    
@@ -21,7 +22,7 @@
     <p>🥞Preston Pancakes In The Park!🥞 
     <br>Saturday 9am at the City Park Pavillion</p>
     </div>
-    
+
       <header>
         <picture><img src="images/weatherbolt.png" alt="naturally weather logo with cloud and bolt" width="150" height="150"></picture>
          
