--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -46,6 +46,11 @@
     
 
 <main>
+  <div class="homeHero">
+    <picture class="homeHeroimg">
+      <img src="images/reflection.jpg" alt="waterfall landscape">
+    </picture>
+  </div>
 
     <section class="contactinfo">  
         <div class="map">
