--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -52,6 +52,14 @@
     </picture>
   </div>
 
+  <div class="towns">
+    </div>
+
+  <div class="homeArticle">
+    <h2>Homepage Article</h2>
+    <p></p>
+  </div>
+  
     <section class="contactinfo">  
         <div class="map">
             <img class="prestonMap" src="images/prestonmap.png" alt="Map of Preston, Idaho" width="360" height="300">
