--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -56,8 +56,9 @@
     </div>
 
   <div class="homeArticle">
-    <h2>Homepage Article</h2>
-    <p></p>
+    <h3>Homepage Article</h3>
+    <p>Tae eris dolorem aciumet maio omnis qui od maximodignis et eum sust, cus, a quam id moluptium rem esequia aut et quia aditati isquiae rchilit, to odi cum ratur modis nonet as sita dolo ommos aciur andame et utati vendae porit hariossimus, autet velitas corest eni dolorer citatin veniend ebitius.
+      Em incto eume sum quam et volores as min proreni hiliqui doluptati suntore nis unti aut dolupta dus ullecta ad quis nonsecto quibusd antotamet et maiorpo reperit ionsequatiis ipissim inctur maximodit quaeris il et ese nestrum quuntibuscil et volupti nvellore, quameni sinctassim quibusaerior rerum ipsaect emporero que laborporecto voloris dolupta sandande sit od molupta erumenihit, qui nectem re ad ut quam excera dollupt aepercium id quaero volor alitatios molut velite laborem volorep udandandia perro quia sum inventia pe voluptur.</p>
   </div>
   
     <section class="contactinfo">  
