--- a/lesson9/home.html
+++ b/lesson9/home.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/large.css">
     <script defer src="js/homepage.js"></script>
     <script defer src="js/lazyload.js"></script>
+    <script defer src="js/towndata.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Poppins:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">    
