--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -51,9 +51,9 @@
   <h2>Welcome To The City of Preston, Idaho</h2>
       <div class="herodiv">
         <picture class="prestontown">  
-        <source srcset="images/hero400-small.png" media="(max-width:399px)">
-        <source srcset="images/hero800-medium.png" media="(max-width:799px)">
-        <source srcset="images/hero1200-large.png" media="(min-width:899px)">
+        <source srcset="images/herosmall.jpg" media="(max-width:399px)">
+        <source srcset="images/heromedium.jpg" media="(max-width:799px)">
+        <source srcset="images/herolarge.jpg" media="(min-width:899px)">
         <img src="images/originalhero.jpeg" alt="City view of Preston, Idaho" width="1100" height="500">
         </picture>
         
