--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -62,17 +62,17 @@
           <h2>Weather Summary</h2>
           <div class="gridlayout">
             <span class="suminfo">Currently:</span>
-            <span class="currentval">Partly Cloudy</span>
+            <span class="currentval" id="condition"></span>
             <span class="suminfo">Temperature:</span>
-                <span class="temp">60°F</span>
+                <span class="currentval"><span id="temp"></span>°F</span>
             <span class="suminfo">Wind Chill:</span>
               <span class="currentval">
-                <span class="windchill"></span></span>
+                <span class="currentval"><span id="wchill"></span></span>
             <span class="suminfo">Wind Speed:</span>
             <span class="currentval">
-                <span class="windspeed">3</span> mph</span>
+                <span class="windspeed"><span id="wspeed"></span> mph</span>
             <span class="suminfo">Humidity:</span>
-            <span class="currentval">55%</span>
+            <span class="currentval"><span id="humidity"> %</span>
 
           </div>
         </section>
