--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -69,12 +69,11 @@
               <span class="currentval">
                 <span class="currentval"><span id="wchill"></span></span>
             <span class="suminfo">Wind Speed:</span>
-            <span class="currentval">
+            <span class="currentval"></span>
                 <span class="windspeed"><span id="wspeed"></span> mph</span>
             <span class="suminfo">Humidity:</span>
-            <span class="currentval"><span id="humidity"> %</span>
+            <span class="currentval"><span id="humidity"> %</span></span>
 
-          </div>
         </section>
       </div>
   </div>
