--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -67,10 +67,10 @@
                 <span class="currentval"><span id="temp"></span>°F</span>
             <span class="suminfo">Wind Chill:</span>
               <span class="currentval"></span>
-                <span class="currentval"><span id="wchill"></span></span>
+                <span class="currentval"><span id="wind-chill"></span></span>
             <span class="suminfo">Wind Speed:</span>
             <span class="currentval"></span>
-                <span class="windspeed"><span id="wspeed"></span> mph</span>
+                <span class="windspeed"><span id="wind-speed"></span> mph</span>
             <span class="suminfo">Humidity:</span>
             <span class="currentval"><span id="humidity"> %</span></span>
             </div>
