--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <li>Lesson 9: <a href="https://mikennaa.github.io/wdd230/lesson9/prophets.html">Latter-Day Prophets Activity</a></li>
             <li>Lesson 9: <a href="https://mikennaa.github.io/wdd230/lesson9/home-wireframes.html">Home Page Wireframes</a></li>
             <li>Lesson 9: <a href="https://mikennaa.github.io/wdd230/lesson9/home.html">Home Page</a></li>
+            <li>Lesson 10: <a href="https://mikenna.github.io/wdd230/lesson10/preston-10.html"> Preston Weather API</a></li>
             
             
           </ul>
