--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -39,11 +39,11 @@
         <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="primaryNav" class="hide">
           <li><a href="https://mikennaa.github.io/wdd230/lesson9/home.html">Home</a></li>
-          <li class="activebutton"><a href="">Preston</a></li>
+          <li class="activebutton"><a href="https://mikenna.github.io/wdd230/lesson10/preston-10.html">Preston</a></li>
           <li><a href="#">Soda Springs</a></li>
           <li><a href="#">Fish Haven</a></li>
-          <li><a href="#">Storm Center</a></li>
-          <li><a href="#">Gallery</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson8/stormcenter.html">Storm Center</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson7/gallery-7.html">Gallery</a></li>
         </ul>
       </nav>
 
