--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -62,21 +62,22 @@
         <section class="summary">
           <h2>Weather Summary</h2>
           <div class="gridlayout">
-            <span class="suminfo">Currently:</span>
-            <span class="currentval">Partly Cloudy</span>
-            <span class="suminfo">Temperature:</span>
-                <span class="temp">60°F</span>
-            <span class="suminfo">Wind Chill:</span>
-              <span class="currentval">
-                <span class="windchill"></span></span>
-            <span class="suminfo">Wind Speed:</span>
+            <span class="label">Currently:</span>
+            <span class="value"> <span id="currently"></span></span>
+
+            <span class="label">Temperature:</span>
+                <span class="value"><span id="temp"></span>°F</span>
+
+            <span class="label">Wind Chill:</span>
+              <span class="value"><span id="wind-chill"></span>°F</span>
+            
+              <span class="label">Humidity:</span>
+            <span class="value"><span id="humidity"></span> % </span>
+
+              <span class="suminfo">Wind Speed:</span>
             <span class="currentval">
                 <span class="windspeed">3</span> mph</span>
-            <span class="suminfo">Humidity:</span>
-            <span class="currentval">55%</span>
-            <span class="suminfo">UV Index:</span>
-            <span class="currentval">4 of 10</span>
-
+            
           </div>
         </section>
       </div>
