--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -72,44 +72,48 @@
               <span class="value"><span id="wind-chill"></span>°F</span>
             
               <span class="label">Humidity:</span>
-            <span class="value"><span id="humidity"></span> % </span>
+            <span class="value"><span id="humidity"></span> %</span>
 
-              <span class="suminfo">Wind Speed:</span>
-            <span class="currentval">
-                <span class="windspeed">3</span> mph</span>
+              <span class="label">Wind Speed:</span>
+            <span class="value"><span id="wind-speed"></span> mph</span>
             
           </div>
         </section>
       </div>
   </div>
-  <section class="contentboxes">
-      <h2>5-Day Forecast</h2>
-<div class="forecast">
+  
+  <section class="fiveday">
+  <h2>5-Day Forecast</h2>
+<div class="flex">
 	<div class="forecast-col">
-		<span class="col-head">Mon</span>
-		<img src="images/rainshowers.png" alt="rain showers" width="70" height="70">
-		<span class="data">50°F</span>
+		<span class="col-head" id="day1"></span>
+		<img src="" alt="" id="img1">
+		<span class="data" id="dtemp1"> °F</span>
 	</div>
+
 	<div class="forecast-col">
-		<span class="col-head">Tues</span>
-		<img src="images/snowshowers.png" alt="snow showers" width="70" height="70" >
-		<span class="data">41°</span>
+		<span class="col-head" id="day2"></span>
+		<img src="" alt="" id="img2">
+		<span class="data" id="dtemp2"> °F</span>
 	</div>
+
 	<div class="forecast-col">
-		<span class="col-head">Wed</span>
-		<img src="images/cloudy.png" alt="partly cloudy" width="70" height="70">
-		<span class="data">51°</span>
+		<span class="col-head" id="day3"></span>
+		<img src="" alt="" id="img3">
+		<span class="data" id="dtemp3"> °F</span>
 	</div>
+
 	<div class="forecast-col">
-		<span class="col-head">Thur</span>
-		<img src="images/sunny.png" alt="sunny" width="70" height="70">
-		<span class="data">56°</span>
+		<span class="col-head" id="day4"></span>
+		<img src="" alt="" id="img4">
+		<span class="data" id="dtemp4"> °F</span>
 	</div>
+
 	<div class="forecast-col">
-		<span class="col-head">Fri</span>
-		<img src="images/sunny.png" alt="sunny" width="70" height="70">
-		<span class="data">60°</span>
-	</div>	
+		<span class="col-head" id="day5"></span>
+		<img src="" alt="" id="img5">
+		<span class="data" id="dtemp5"> °F</span>
+	</div>
 </div>
 </section>
 
