--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -164,7 +164,7 @@ Preston, Idaho 83263</p>
 </section>
     <br>
     <br>
-    &copy; <span id="copyrightyear">2021</span> | Naturally Weather | Attributions | Mikenna Atkinson
+    &copy; <span id="copyrightyear">2021</span> | Naturally Weather | Current Weather Provided by <a href="https://openweathermap.org/">OpenWeather</a> | Mikenna Atkinson
     <br> <span id="currentDate"></span>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
